# MythoECS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: MythoECSConfig.cmake.in
src/: CMakeLists.txt
src/include/: ecs.hpp
src/include/container/: component_set.hpp  component_storage.hpp  entity_set.hpp  entity_storage.hpp  event_set.hpp  event_storage.hpp  indexed_list.hpp  resource_storage.hpp  sparse_set.hpp  tick_set.hpp
src/include/core/: concept.hpp  idgen.hpp  mmem.hpp  type_list.hpp
src/include/ecs/: commands.hpp  ecs.hpp  entity.hpp  event.hpp  querier.hpp  registrar.hpp  registry.hpp  resources.hpp  schedule.hpp  system.hpp
src/include/ecs/core/: event.hpp  state.hpp
src/include/storage/: component_set.hpp  component_storage.hpp  entity_set.hpp  entity_storage.hpp  resource_storage.hpp  sparse_set.hpp  tick_set.hpp
src/include/utils/: assert.hpp  concept.hpp  func_list.hpp  idgen.hpp  mmem.hpp  type_list.hpp
src/test/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt
tests/src/: main_test.cc
tests/src/container/: component_set.cc  component_storage.cc  entity_set.cc  entity_storage.cc  indexed_list.cc  sparse_set.cc
tests/src/ecs/: commands.cc  entity.cc  registry.cc  resouces.cc  system.cc
tests/src/unit_case/: component_storage.cc  entity_set.cc  entity_storage.cc
tests/src/unit_case/container/: component_set.cc  component_storage.cc  entity_set.cc  entity_storage.cc  event_set.cc  event_storage.cc  resource_storage.cc  sparse_set.cc  tick_set.cc
tests/src/unit_case/include/: components.hpp  events.hpp  resources.hpp
tests/src/unit_case/src/container/: component_set.cc  component_storage.cc  entity_set.cc  entity_storage.cc  event_set.cc  event_storage.cc  resource_storage.cc  sparse_set.cc  tick_set.cc
tests/src/unit_case/src/ecs/: commands.cc  entity.cc  event.cc  querier.cc  registrar.cc  registry.cc  schedule.cc  system.cc
tests/src/unit_case/src/utils/: concept.cc  idgen.cc  type_list.cc
tests/src/unit_case/utils/: assert.cc  concept.cc  idgen.cc  type_list.cc
tests/src/use_case/: commands.cc  entity.cc  registry.cc  resouces.cc  system.cc
tests/src/use_case/src/: commands.cc  event.cc  querier.cc  registry.cc  removed_entities.cc  resouces.cc  state.cc  system.cc  systems.cc
